RESOLVED FIXED258426
[SVG] Consult white-space-collapse instead of white-space to determine preserving white-space
https://bugs.webkit.org/show_bug.cgi?id=258426
Summary [SVG] Consult white-space-collapse instead of white-space to determine preser...
Tim Nguyen (:ntim)
Reported 2023-06-22 17:32:18 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-22 17:32:40 PDT
Tim Nguyen (:ntim)
Comment 2 2023-06-22 17:40:16 PDT
EWS
Comment 3 2023-06-22 19:58:30 PDT
Committed 265438@main (b896a1bccc8b): <https://commits.webkit.org/265438@main> Reviewed commits have been landed. Closing PR #15219 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.